--- a/src/UI/FullScreenModal/FullScreenModal.module.scss
+++ b/src/UI/FullScreenModal/FullScreenModal.module.scss
@@ -5,7 +5,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
+  min-width: 100vw;
+  width: 100%;
   height: 100vh;
   background-color: rgba(7, 5, 14, 0.96);
   display: flex;
