--- a/src/components/Modals/RatingModal/RatingModal.module.scss
+++ b/src/components/Modals/RatingModal/RatingModal.module.scss
@@ -19,6 +19,7 @@
   button {
     margin: 3px;
     padding: 0;
+    max-height: 46px;
     border-radius: 12px;
     height: 6vw;
     aspect-ratio: 14/16;
