--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,7 +3,7 @@
 
 #__next {
   height: 100%;
-  width: 100%;
+  width: 100vw;
   padding: 0;
   margin: 0;
 }
@@ -23,7 +23,7 @@ body {
 }
 
 .wrapper {
-  width: 100%;
+  width: 100vw;
   height: 100%;
   display: flex;
   flex-direction: column;
