--- a/src/styles/normalize.scss
+++ b/src/styles/normalize.scss
@@ -11,7 +11,6 @@
 html {
   line-height: 1.15;
   overflow-y: auto;
-  scrollbar-gutter: stable;
   /* 1 */
   text-size-adjust: 100%;
 
